# restaurant-platform-sync-service

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  README.md  claude_instructions.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: setup_dev_env.sh  verify_setup.sh
src/: lambda_dependencies.py  lambda_handler.py  main.py
src/restaurant_sync_service/: __init__.py
src/restaurant_sync_service/adapters/: __init__.py  base_adapter.py  doordash_adapter.py
src/restaurant_sync_service/auth/: __init__.py  api_dependencies.py  api_key_validator.py
src/restaurant_sync_service/handlers/: __init__.py  api_handler.py  event_handler.py
src/restaurant_sync_service/models/: __init__.py  menu_models.py  sync_models.py
src/restaurant_sync_service/observability/: __init__.py  config.py  decorators.py  metrics.py
src/restaurant_sync_service/repositories/: __init__.py  sync_repositories.py
src/restaurant_sync_service/security/: __init__.py
src/restaurant_sync_service/services/: error_service.py  menu_service_client.py  sync_service.py
tests/: __init__.py  conftest.py
tests/component/: __init__.py  test_doordash_adapter.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_api_dependencies.py  test_api_handler.py  test_api_key_validator.py  test_base_adapter.py  test_doordash_adapter.py  test_error_service.py  test_event_handler.py  test_lambda_dependencies.py  test_lambda_handler.py  test_main.py  test_menu_service_client.py  test_sync_models.py  test_sync_repositories.py  test_sync_service.py
